script add to interact with smartcontract, interation testing

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Foundry-Fundme/lib/chainlink-brownie-contracts"]
 	path = Foundry-Fundme/lib/chainlink-brownie-contracts
 	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "Foundry-Fundme/lib/foundry-devops"]
+	path = Foundry-Fundme/lib/foundry-devops
+	url = https://github.com/Cyfrin/foundry-devops
