--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Foundry-Fundme/lib/foundry-devops"]
 	path = Foundry-Fundme/lib/foundry-devops
 	url = https://github.com/Cyfrin/foundry-devops
+[submodule "foundry-smartcontract-lottery/lib/forge-std"]
+	path = foundry-smartcontract-lottery/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
