Read me updated

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "foundry-smartcontract-lottery/lib/forge-std"]
 	path = foundry-smartcontract-lottery/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "foundry-smartcontract-lottery/lib/chainlink-brownie-contracts"]
+	path = foundry-smartcontract-lottery/lib/chainlink-brownie-contracts
+	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
