added link token  contract, created script to get subscription id, fund the subscription

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "foundry-smartcontract-lottery/lib/chainlink-brownie-contracts"]
 	path = foundry-smartcontract-lottery/lib/chainlink-brownie-contracts
 	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "foundry-smartcontract-lottery/lib/solmate"]
+	path = foundry-smartcontract-lottery/lib/solmate
+	url = https://github.com/transmissions11/solmate
