--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "foundry-smartcontract-lottery/lib/foundry-devops"]
 	path = foundry-smartcontract-lottery/lib/foundry-devops
 	url = https://github.com/Cyfrin/foundry-devops
+[submodule "foundry-erc20-token/lib/forge-std"]
+	path = foundry-erc20-token/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "foundry-erc20-token/lib/openzeppelin-contracts"]
+	path = foundry-erc20-token/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
