--- a/Foundry-nft/foundry.toml
+++ b/Foundry-nft/foundry.toml
@@ -3,6 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings=  ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts/"]
-ffi=true
+ffi=true  # this should be false by default
+fs_permissions = [{access = "read",path="./img/"}]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
