--- a/Foundry-Stable-Coin/foundry.toml
+++ b/Foundry-Stable-Coin/foundry.toml
@@ -4,9 +4,9 @@ out = "out"
 libs = ["lib"]
 remappings= ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts", "@chainlink/contracts=lib/chainlink-brownie-contracts/contracts"]
 [invariant]
-runs=1000
+runs=128
 depth=128
-fail_on_revert=false
+fail_on_revert=true
 
 # runs calling contract 1000 times and each run it will call function 128 times
 
